[package]
name = "custard-test-core"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]


[dependencies]
custard-use = {path="../custard-use"}
lazy_static = {version = "1.4.0"}
# Here go all the crates that should submit Tasks and Datachunks.