[package]
name = "custard-test-core"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]


[dependencies]
custard-macros = {  path = "../custard-macros" }
custard-use = { path = "../custard-use" }

# Here go all the crates that should submit Tasks and Datachunks.